test/typeerrors/ex17.golden
Building file ../test/typeerrors/ex17.act
  Compiling ex17.act for release

ERROR: Error when compiling ex17 module: Type error

  |
2 |a = pow(3,"hej")
  |    ^^^
pow has had its polymorphic type [A(Number)] => (a: A, b: A) -> A instantiated to (a: t0, b: t0) -> t0, so
t0 must implement __builtin__.Number

  |
2 |a = pow(3,"hej")
  |    ^^^^^^^^^^^^
The type of pow(3, "hej") ( __builtin__.str) must be a subclass of t0

  |
2 |a = pow(3,"hej")
  |    ^^^^^^^^^^^^
The type of pow(3, "hej") (which we call t1) must be a subtype of t0

  |
2 |a = pow(3,"hej")
  |    ^^^
pow has had its polymorphic type [A(Number)] => (A, A) -> A instantiated to (t0, t0) -> t0, so t0 must implement __builtin__.Number

  |
2 |a = pow(3,"hej")
  |        ^
The type of 3 (which we call t1) must implement __builtin__.Number

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

